--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<img src="C:\Users\and\Desktop\New folder (2)\images\our-lady-of-fatima-01.jpg"width="440" height="200">
-<img src="C:\Users\and\Desktop\New folder (2)\images\down.jpg"width="440" height="200">
+<img src="-kayunga-catholic-parish/images\our-lady-of-fatima-01.jpg"width="440" height="200">
+<img src="-kayunga-catholic-parish/images\down.jpg"width="440" height="200">
 <frameset frame border="3cols="250%">
 </html>
  <hr align="left to right"width="150%">
@@ -72,7 +72,7 @@ ul {
 </html>
 
 <html>
-<img src="C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg"width="610"height="294">
+<img src="-kayunga-catholic-parish/images\kagy.jpg.jpg"width="610"height="294">
 <frameset frame border="3cols="150">
 </html>
 <font color="#eeoooo"><b><h3>MORE ABOUT THE PARISH</h3></b></font>
