--- a/prayers1.html
+++ b/prayers1.html
@@ -18,7 +18,7 @@
 <h3>THE SIGN OF THE CROSS</h3>
 In the name of the Father, and of the
 Son and of the Holy Spirit. Amen.
-<h3>OUR FATHER<h3>
+<h3>OUR FATHER</h3>
 Our Father, Who art in heaven, Hallowed
 be Your Name. Your Kingdom come.
 Your Will be done, on earth as it is in
@@ -28,7 +28,7 @@ forgive us our trespasses, as we forgive
 those who trespass against us. And lead
 us not into temptation, but deliver us
 from evil. Amen.
-<h3>HAIL MARY<h3>
+<h3>HAIL MARY</h3>
 Hail Mary, Full of Grace, The Lord is with
 you. Blessed are you among women,
 and blessed is the fruit of your womb,
@@ -423,7 +423,7 @@ of the Holy Spirit be with you all.
 <p>
 <b>All:</b>  And also with you.
 <p>
-<h3>Penitential Rite<h3>
+<h3>Penitential Rite</h3>
 <b>Priest:</b>  My brothers and sistes, to
 prepare ourselves to celebrate the
 sacred mysteries, let us call to mind our
@@ -585,7 +585,7 @@ Prayer over the Gifts
 <p> 
 <b>All:</b>  And also with you.
 <p>
-<b>Priest:<b>  Lift up your hearts. 
+<b>Priest:</b>  Lift up your hearts. 
 <p> 
 <b>All:</b>  We lift them up to the Lord.
 <p>
@@ -622,7 +622,7 @@ Father, for ever and ever.
  <p>
 <h3>COMMUNION RITE</h3>
 <p>
-<h3>Lord’s Prayer<//h3>
+<h3>Lord’s Prayer</h3>
 <p>
 <b>Priest:</b>  Let us pray with confience to the
 Father in the words our Savior gave us.
