--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ ul {
       <li><a href="Present1.html">Present</a></li></font>
 	  <li><a href="projects1.html">Projects</a></li></font>
 	  <li><a href="Galary1.html">Galary</a></li></font>
-	  <li><a href="sign in1.html">SIGN IN</a></li></font>
+	  <li><a href="Login">Login</a></li></font>
 	  <li><a href="prayers1.html">PRAYERS</a></li></font><html>
    <head>
    </ul>  <div id = "content" align = "center">
