--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<img src="-kayunga-catholic-parish/images/our-lady-of-fatima-01.jpg"width="440" height="200">
-<img src="-kayunga-catholic-parish/images/down.jpg"width="440" height="200">
+<img src="https://photos.google.com/photo/AF1QipMUy06DjBQZJ7ZPR6835WXZd3l_frmnx_yYSZea"width="440" height="200">
+<img src="https://photos.google.com/photo/AF1QipOKj1P_wXsAmVqho7t-jzZofqALfjK5njmYL6z2"width="440" height="200">
 <frameset frame border="3cols="250%">
 </html>
  <hr align="left to right"width="150%">
@@ -72,7 +72,7 @@ ul {
 </html>
 
 <html>
-<img src="-kayunga-catholic-parish/images\kagy.jpg.jpg"width="610"height="294">
+<img src="https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT"width="610"height="294">
 <frameset frame border="3cols="150">
 </html>
 <font color="#eeoooo"><b><h3>MORE ABOUT THE PARISH</h3></b></font>
