--- a/Present1.html
+++ b/Present1.html
@@ -6,8 +6,8 @@
    </head>
 	
    <body>
-      <embed src = "C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" width = "200" height = "150">
-         <noembed><img src = "C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" alt = "Alternative Media" ></noembed>
+      <embed src = "https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT" width = "200" height = "150">
+         <noembed><img src = "https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT" alt = "Alternative Media" ></noembed>
       </embed></img align>
    </body>
    <html>
