--- a/home1.html
+++ b/home1.html
@@ -10,7 +10,7 @@
 </html>
 
 <html>
-<center><img src="C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg"width="610"height="294"></center>
+<center><img src="https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT"width="610"height="294"></center>
 <frameset frame border="3cols="150">
 </html>
 </html>
