--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ ul {
 </html>
 
 <html>
-<img src="https://photos.google.com/album/AF1QipOGMo77lirQHfFpFNZGllJb1-3nIFIWHbzhFTDb"width="610"height="294">
+<img src="https://photos.app.goo.gl/znUJjdb9ZPq3CLzs5"width="610"height="294">
 <frameset frame border="3cols="150">
 </html>
 <font color="#eeoooo"><b><h3>MORE ABOUT THE PARISH</h3></b></font>
