--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<img src="https://photos.google.com/album/AF1QipOGMo77lirQHfFpFNZGllJb1-3nIFIWHbzhFTDb/photo/AF1QipM0WduFCoevCHGPU1eVB6Z7IQ0wW-p0qKpvrU4Z"width="440" height="200">
-<img src="https://photos.google.com/photo/AF1QipOKj1P_wXsAmVqho7t-jzZofqALfjK5njmYL6z2"width="440" height="200">
+<img src="https://photos.fife.usercontent.google.com/pw/AP1GczNsMBOCStzQmLIH4ckc5erQ3jUtNmmk-fm5SLDyEyuFkcrRNJqSAvU=w281-h400-s-no?authuser=0"width="440" height="200">
+<img src="https://photos.fife.usercontent.google.com/pw/AP1GczOcCWYedrj4nWpa6-ZT-xcxJzWP85KbQ34fGueURHiFw02nZPCUYhI=w315-h160-s-no?authuser=0"width="440" height="200">
 <frameset frame border="3cols="250%">
 </html>
  <hr align="left to right"width="150%">
