--- a/videos1.html
+++ b/videos1.html
@@ -2,11 +2,11 @@
 <P>
 UGANGA MARTYRS S.S KAYUNGA
 <p>
-<video src="C:\Users\and\Desktop\New folder (2)\videos\VID-20240113-WA0064.mp4"width="300" height="200" controls>
+<video src="https://www.youtube.com/watch?v=-e03RbOaeNA"width="300" height="200" controls>
 <p>
 Uganda martyrs Students performing at the lugazi diocese
 <p>
-<video src="C:\Users\and\Desktop\New folder (2)\videos\VID-20240113-WA0066.mp4"width="300" height="200" controls>
+<video src="https://www.youtube.com/watch?v=qjqm-UQJ8qo"width="300" height="200" controls>
 <p>
 Uganda martyrs Students performing at the lugazi diocese
 <p>
