--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ ul {
 	  <li><a href="projects1.html">Projects</a></li></font>
 	  <li><a href="Galary1.html">Galary</a></li></font>
 	  <li><a href="Login">Login</a></li></font>
+	  <li><a href="videos1">Videos</a></li></font>
 	  <li><a href="prayers1.html">PRAYERS</a></li></font><html>
    <head>
    </ul>  <div id = "content" align = "center">
