--- a/videos1.html
+++ b/videos1.html
@@ -2,7 +2,7 @@
 <P>
 UGANGA MARTYRS S.S KAYUNGA
 <p>
-link video="https://www.youtube.com/watch?v=-e03RbOaeNA"width="300" height="200" controls>
+<video src="https://www.youtube.com/watch?v=-e03RbOaeNA"width="300" height="200" controls>
 <p>
 Uganda martyrs Students performing at the lugazi diocese
 <p>
