--- a/videos1.html
+++ b/videos1.html
@@ -2,7 +2,7 @@
 <P>
 UGANGA MARTYRS S.S KAYUNGA
 <p>
-<video src="https://www.youtube.com/watch?v=-e03RbOaeNA"width="300" height="200" controls>
+"{videoURL:'https://www.youtube.com/watch?v=-e03RbOaeNA', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}
 <p>
 Uganda martyrs Students performing at the lugazi diocese
 <p>
