--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<img src="https://photos.google.com/memory/featured/AF1QipNqJxNsl9nhU_atyITLCZt6wKCQxTQFuq4etaQtzA" width="440" height="200">
-<img src="https://photos.google.com/photo/AF1QipOKj1P_wXsAmVqho7t-jzZofqALfjK5njmYL6z2" width="440" height="200">
+<img src="https://photos.google.com/memory/featured/AF1QipNqJxNsl9nhU_atyITLCZt6wKCQxTQFuq4etaQtzA">
+<img src="https://photos.google.com/photo/AF1QipOKj1P_wXsAmVqho7t-jzZofqALfjK5njmYL6z2">
 <frameset frame border="3cols="250%">
 </html>
  <hr align="left to right"width="150%">
