--- a/videos1.html
+++ b/videos1.html
@@ -2,11 +2,11 @@
 <P>
 UGANGA MARTYRS S.S KAYUNGA
 <p>
-"{videoURL:'https://www.youtube.com/watch?v=-e03RbOaeNA', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}
+<video src="https://youtu.be/-e03RbOaeNA"width="300" height="200" controls>
 <p>
 Uganda martyrs Students performing at the lugazi diocese
 <p>
-<video src="https://www.youtube.com/watch?v=qjqm-UQJ8qo"width="300" height="200" controls>
+<video src="https://youtu.be/qjqm-UQJ8qo" height="200" controls>
 <p>
 Uganda martyrs Students performing at the lugazi diocese
 <p>
