--- a/Location1.html
+++ b/Location1.html
@@ -7,7 +7,7 @@
 	
    <body>
       <link rel = "https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT" width = "200" height = "150">
-         <noembed><img src = "https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT" alt = "Alternative Media" ></noembed>
+         <noembed><link rel = "https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT" alt = "Alternative Media" ></noembed>
       </embed></img align>
    </body>
 
