--- a/videos1.html
+++ b/videos1.html
@@ -2,11 +2,221 @@
 <P>
 UGANGA MARTYRS S.S KAYUNGA
 <p>
-<video src="https://youtu.be/-e03RbOaeNA"width="300" height="200" controls>
+<h3><font color="blue">SOME OF PARISH SCHOOL VIDEOS</font></H3>
+<P>
+UGANGA MARTYRS S.S KAYUNGA
 <p>
-Uganda martyrs Students performing at the lugazi diocese
-<p>
-<video src="https://youtu.be/qjqm-UQJ8qo" height="200" controls>
-<p>
-Uganda martyrs Students performing at the lugazi diocese
-<p>
+<html>
+<body>
+<style>
+/*********************/
+/*     11. Video     */
+/*********************/
+.basic-4 {
+	padding-top: 4rem;
+	padding-bottom: 3rem;
+	background-color: #fbf9f5;
+}
+
+.basic-4 h2 {
+	margin-bottom: 2.75rem;
+	text-align: center;
+}
+
+.basic-4 .image-container {
+	margin-bottom: 2rem;
+}
+
+.basic-4 .image-container img {
+	border-radius: 0.75rem;
+}
+
+.basic-4 .video-wrapper {
+	position: relative;
+}
+
+/* Video Play Button */
+.basic-4 .video-play-button {
+	position: absolute;
+	z-index: 10;
+	top: 50%;
+	left: 50%;
+	display: block;
+	box-sizing: content-box;
+	width: 2rem;
+	height: 2.75rem;
+	padding: 1.125rem 1.25rem 1.125rem 1.75rem;
+	border-radius: 50%;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+}
+  
+.basic-4 .video-play-button:before {
+	content: "";
+	position: absolute;
+	z-index: 0;
+	top: 50%;
+	left: 50%;
+	display: block;
+	width: 4.75rem;
+	height: 4.75rem;
+	border-radius: 50%;
+	background: #ffbd50;
+	animation: pulse-border 1500ms ease-out infinite;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+}
+  
+.basic-4 .video-play-button:after {
+	content: "";
+	position: absolute;
+	z-index: 1;
+	top: 50%;
+	left: 50%;
+	display: block;
+	width: 4.375rem;
+	height: 4.375rem;
+	border-radius: 50%;
+	background: #ffbd50;
+	transition: all 200ms;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+}
+  
+.basic-4 .video-play-button span {
+	position: relative;
+	display: block;
+	z-index: 3;
+	top: 0.375rem;
+	left: 0.25rem;
+	width: 0;
+	height: 0;
+	border-left: 1.625rem solid #fff;
+	border-top: 1rem solid transparent;
+	border-bottom: 1rem solid transparent;
+}
+  
+@keyframes pulse-border {
+	0% {
+		transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+		opacity: 1;
+	}
+	100% {
+		transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+		opacity: 0;
+	}
+}
+/* end of video play button */
+
+
+/*************************/
+/*     12. Takeaways     */
+/*************************/
+.cards {
+	padding-top: 3rem;
+	padding-bottom: 2rem;
+	background-color: #fbf9f5;
+}
+
+.cards h2 {
+	margin-bottom: 1rem;
+	text-align: center;
+}
+
+.cards p {
+	text-align: center;
+}
+
+.cards .card {
+	max-width: 21rem;
+	margin-right: auto;
+	margin-bottom: 4rem;
+	margin-left: auto;
+	padding: 3rem 1.625rem 1.75rem 1.625rem;
+	border: none;
+	background-color: #fff;
+	text-align: center;
+}
+
+.cards .card-image {
+	width: 6rem;
+	height: 6rem;
+	margin-right: auto;
+	margin-bottom: 1.5rem;
+	margin-left: auto;
+	border-radius: 50%;
+	background-color: #fbf9f5;
+}
+
+.cards .fas,
+.cards .far {
+	color: #ffbd50;
+	font-size: 3rem;
+	line-height: 6rem;
+}
+
+.cards .card-body {
+	padding: 0;
+}
+
+.cards .card-title {
+	margin-bottom: 0.5rem;
+}
+</style>
+
+<!-- Video -->
+    <div class="basic-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Uganda Martyrs students performing at Lugazi</h2>
+
+                    <!-- Video Preview -->
+                    <div class="image-container">
+                        <div class="video-wrapper">
+                            <a class="popup-youtube" href="https://youtu.be/-e03RbOaeNA" data-effect="fadeIn">
+                                <img class="img-fluid" src="images/video.jpg" alt="alternative">
+                                <span class="video-play-button">
+                                    <span></span>
+                                </span>
+                            </a>
+                        </div> <!-- end of video-wrapper -->
+                    </div> <!-- end of image-container -->
+                    <!-- end of video preview -->
+
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-4 -->
+    <!-- end of video -->
+	<p>
+	<!-- Video -->
+    <div class="basic-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Uganda Martyrs students performing at Lugazi</h2>
+
+                    <!-- Video Preview -->
+                    <div class="image-container">
+                        <div class="video-wrapper">
+                            <a class="popup-youtube" href="https://youtu.be/qjqm-UQJ8qo" data-effect="fadeIn">
+                                <img class="img-fluid" src="images/video.jpg" alt="alternative">
+                                <span class="video-play-button">
+                                    <span></span>
+                                </span>
+                            </a>
+                        </div> <!-- end of video-wrapper -->
+                    </div> <!-- end of image-container -->
+                    <!-- end of video preview -->
+
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-4 -->
+    <!-- end of video -->
+
+
