--- a/videos1.html
+++ b/videos1.html
@@ -1,7 +1,7 @@
 <h3><font color="blue">SOME OF PARISH SCHOOL VIDEOS</font></H3>
 <P>
-UGANGA MARTYRS S.S KAYUNGA
-<p></p>
+UGANDA MARTYRS S.S KAYUNGA
+<p>
 <html>
 <body>
 <style>
