--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<img src="-kayunga-catholic-parish/images/our-lady-of-fatima-01.jpg" width="440" height="200">
-<img src="-kayunga-catholic-parish/images/kagy.png" width="440" height="200">
+<img src="-kayunga-catholic-parish/images/our-lady-of-fatima-01.JPG" width="440" height="200">
+<img src="-kayunga-catholic-parish/images/kagy.JPG" width="440" height="200">
 <frameset frame border="3cols="250%">
 </html>
  <hr align="left to right"width="150%">
