--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<img src="-kayunga-catholic-parish/images/our-lady-of-fatima-01.JPG" width="440" height="200">
+<img src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/our-lady-of-fatima-01.jpg?raw=true" width="440" height="200">
 <img src="-kayunga-catholic-parish/images/kagy.JPG" width="440" height="200">
 <frameset frame border="3cols="250%">
 </html>
