--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ ul {
 </html>
 
 <html>
-<img src="https://photos.fife.usercontent.google.com/pw/AP1GczPGwAzmj7IBonEY9CAMwmJFhgpllw0VMd6kQOYZwoROIYeDWLAsjqM=w610-h294-s-no?authuser=0"width="610"height="294">
+<img src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true"width="610"height="294">
 <frameset frame border="3cols="150">
 </html>
 <font color="#eeoooo"><b><h3>MORE ABOUT THE PARISH</h3></b></font>
