--- a/Location1.html
+++ b/Location1.html
@@ -6,8 +6,8 @@
    </head>
 	
    <body>
-          <link rel="preconnect" https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT" width = "200" height = "150">
-         <noembed><link rel="preconnect" https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT" alt = "Alternative Media" ></noembed>
+          <img src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true" width = "200" height = "150">
+         <noembed><img src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true" alt = "Alternative Media" ></noembed>
       </embed></img align>
    </body>
 
