--- a/home1.html
+++ b/home1.html
@@ -1,4 +1,5 @@
-
+<html>
+<body>	
  <h1><font face="algerian"><font color="blue"><center><b><font size="12"><font style="word artstyle 13">OUR LADY OF FATIMA</font></font><h1></b></center></font></font>
 			<h1><font face="algerian"><font color="blue"><center><b><font size="12">KAYUNGA CATHOLIC PARISH</font><h1></b></center></font></font>
 
@@ -10,7 +11,7 @@
 </html>
 
 <html>
-<center><img src="https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT"width="610"height="294"></center>
+<center><img src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true"width="610"height="294"></center>
 <frameset frame border="3cols="150">
 </html>
 </html>
