--- a/Galary1.html
+++ b/Galary1.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<image src="https://photos.google.com/photo/AF1QipN1-GOFmd5VJtsBf9PePqVG5ZJQk3Rf-eZWxMRT" width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true" width="300"height="200">
 <image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0002.jpg" width="300"height="200">
 <image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0009.jpg"width="300"height="200">
 <image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0016.jpg"width="300"height="200">
