--- a/Galary1.html
+++ b/Galary1.html
@@ -3,7 +3,7 @@
 <image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true" width="300"height="200">
 <image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0002.jpg?raw=true" width="300"height="200">
 <image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0009.jpg?raw=true"width="300"height="200">
-<image src=""width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0018.jpg?raw=true"width="300"height="200">
 <image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0017.jpg"width="300"height="200">
 <image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0018.jpg"width="300"height="200">
 <image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0023.jpg"width="300"height="200">
