--- a/Galary1.html
+++ b/Galary1.html
@@ -4,15 +4,15 @@
 <image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0002.jpg?raw=true" width="300"height="200">
 <image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0009.jpg?raw=true"width="300"height="200">
 <image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0018.jpg?raw=true"width="300"height="200">
-<image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0017.jpg"width="300"height="200">
-<image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0018.jpg"width="300"height="200">
-<image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0023.jpg"width="300"height="200">
-<image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0008.jpg"width="300"height="200">
-<image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0020.jpg"width="300"height="200">
-<image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0026.jpg"width="300"height="200">
-<image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0027.jpg"width="300"height="200">
-<image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0025.jpg"width="300"height="200">
-<image src="C:\Users\and\Desktop\New folder (2)\images\IMG-20240115-WA0001.jpg"width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0017.jpg?raw=true"width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0018.jpg?raw=true"width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0023.jpg?raw=true"width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0008.jpg?raw=true"width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0020.jpg?raw=true"width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0026.jpg?raw=true"width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0027.jpg?raw=true"width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0025.jpg?raw=true"width="300"height="200">
+<image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/IMG-20240115-WA0001.jpg?raw=true"width="300"height="200">
 </table>
 </html>
 <p>
