--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ ul {
       <li><a href="Present1.html">Present</a></li></font>
 	  <li><a href="projects1.html">Projects</a></li></font>
 	  <li><a href="Galary1.html">Galary</a></li></font>
-	  <li><a href="Login_page3">Login</a></li></font>
+	  <li><a href="Login_page3.html">Login</a></li></font>
 	  <li><a href="videos1">Videos</a></li></font>
 	  <li><a href="prayers1.html">PRAYERS</a></li></font><html>
    <head>
