--- a/Login_page3.html
+++ b/Login_page3.html
@@ -1,15 +1,15 @@
 <style>
 /* Sidebar */
 aside#sidebar{
-  float:right;
-  width:30%;
-  margin-top:10px;
+  float:middle;
+  width:50%;
+  margin-top:15px;
 }
-</style>
 aside#sidebar .quote input, aside#sidebar .quote textarea{
   width:90%;
   padding:5px;
 }
+</style>	
 <aside id="sidebar">
           <div class="dark">
             <h3>Get A Quote</h3>
