--- a/Login_page3.html
+++ b/Login_page3.html
@@ -4,6 +4,7 @@ aside#sidebar{
   float:middle;
   width:50%;
   margin-top:15px;
+  font size:4px;	
 }
 aside#sidebar .quote input, aside#sidebar .quote textarea{
   width:90%;
@@ -12,7 +13,7 @@ aside#sidebar .quote input, aside#sidebar .quote textarea{
 </style>	
 <aside id="sidebar">
           <div class="dark">
-            <h3>Get A Quote</h3>
+            <h3>Send A Text Message</h3>
             <form class="quote">
   						<div>
   							<label>Name</label><br>
