--- a/Login_page3.html
+++ b/Login_page3.html
@@ -3,12 +3,13 @@
 aside#sidebar{
   float:middle;
   width:50%;
-  margin-top:15px;
-  font size:10px;	
+  margin-top:15px;  	
 }
 aside#sidebar .quote input, aside#sidebar .quote textarea{
   width:90%;
   padding:5px;
+  background-color:grey;
+  fontsize:10px;	
 }
 </style>	
 <aside id="sidebar">
@@ -27,6 +28,7 @@ aside#sidebar .quote input, aside#sidebar .quote textarea{
   							<label>Message</label><br>
   							<textarea placeholder="Message"></textarea>
   						</div>
+		                                 <p></p>
   						<button class="button_1" type="submit">Send</button>
 					</form>
           </div>
