--- a/Login_page3.html
+++ b/Login_page3.html
@@ -3,12 +3,13 @@
 aside#sidebar{
   float:middle;
   width:50%;
-  margin-top:15px;  	
+  margin-top:15px;
+  background-color:grey;
+  fontsize:10px;	
 }
 aside#sidebar .quote input, aside#sidebar .quote textarea{
   width:90%;
   padding:5px;
-  background-color:grey;
   fontsize:10px;	
 }
 </style>	
