--- a/Galary1.html
+++ b/Galary1.html
@@ -25,7 +25,7 @@
    <body>
       <u><font color="blue"><p>Click the image following for videos</p></font></u>
       <a href = "videos1.html" target = "_self"> 
-         <img src = "C:\Users\and\Pictures\Picture1.png"/> 
+         <img src = "https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/Picture1.png?raw=true"/> 
       </a>
    </body>
 	
