--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@ ul {
       <title>Hyperlink Example</title>
    </head>
 
-      <li><a href="home1.html">home</a></li>
-      <li><a href="Location1.html">Location</a></li>
+      <li><a href="home1.html">home</a></li></font>
+      <li><a href="Location1.html">Location</a></li></font>
       <li><a href="Present1.html">Present</a></li></font>
 	  <li><a href="projects1.html">Projects</a></li></font>
 	  <li><a href="Galary1.html">Galary</a></li></font>
 	  <li><a href="Login_page3.html">Login</a></li></font>
 	  <li><a href="videos1">Videos</a></li></font>
-	  <li><a href="prayers1.html">PRAYERS</a></li></font><html>
+	  <li><a href="prayers1.html">PRAYERS</a></li></font></html>
    <head>
    </ul>  <div id = "content" align = "center">
  </ul>
