--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <link rel="icon" href="C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" type="image/jpg" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>KAYUNGA PARISH</title>
 <html>
 <img src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/our-lady-of-fatima-01.jpg?raw=true" width="440" height="200">
 <img src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/down.jpg?raw=true" width="440" height="200">
@@ -58,6 +72,7 @@ ul {
 	  <li><a href="Login_page3.html">Login</a></li></font>
 	  <li><a href="videos1">Videos</a></li></font>
 	  <li><a href="prayers1.html">PRAYERS</a></li></font></html>
+	  <li><a href="KYG donations.html">Donate</a></li></font><html>
    <head>
    </ul>  <div id = "content" align = "center">
  </ul>
