--- a/Galary1.html
+++ b/Galary1.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <link rel="icon" href="C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" type="image/jpg" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>Galary</title>
+  <h1><font face="algerian"><font color="blue"><center><b><font size="12"><font style="word artstyle 13">OUR LADY OF FATIMA</font></font><h1></b></center></font></font>
+			<h1><font face="algerian"><font color="blue"><center><b><font size="12">KAYUNGA CATHOLIC PARISH</font><h1></b></center></font></font>
+
+
 <html>
 <body>
 <image src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true" width="300"height="200">
