--- a/Login_page3.html
+++ b/Login_page3.html
@@ -1,39 +1,96 @@
-<style>
-/* Sidebar */
-aside#sidebar{
-  float:middle;
-  width:90%;
-  margin-top:25px;
-  background-color:grey;
-  fontsize:10px;	
+<!DOCTYPE html>
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <link rel="icon" href="C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" type="image/jpg" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  
+   <title>sign in</title>
+<!DOCTYPE html>
+<html>
+<head>
+<title></title>
+<style type="text/css">
+body{
+     margin:0;
+     padding:0;
+     background:#85d8e5;;
+     box-sizing:border-box;
 }
-aside#sidebar .quote input, aside#sidebar .quote textarea{
-  width:100%;
-  padding:5px;
-  fontsize:10px;	
+.box{
+     width:330px;
+     height:250px;
+     position:absolute;
+     top:50%;
+     left:50%;
+     transform:translate(-50%,-50%);
+          box-sizing:border-box;
 }
-</style>	
-<aside id="sidebar">
-          <div class="dark">
-            <h3>Send A Text Message</h3>
-            <form class="quote">
-  						<div>
-  							<label>Name</label><br>
-  							<input type="text" placeholder="Name">
-  						</div>
-  						<div>
-  							<label>Email</label><br>
-  							<input type="email" placeholder="Emial Address">
-  						</div>
-  						<div>
-  							<label>Message</label><br>
-  							<textarea placeholder="Message"></textarea>
-  						</div>
-		                                 <p></p>
-  						<button class="button_1" type="submit">Send</button>
-					</form>
-          </div>
-        </aside>
-      </div>
-    </section>
+.form-box{
+         width:100%;
+         height:100%;
+         background:#fff;
+}
+.form-box h2{
+         padding:28px;
+         margin-bottom:-30px;
+}
+.form-box input{
+         width:270px;
+         height:20px;
+         margin-left:28px;
+         margin-top:25px;
+         border:none;
+         outline:none;
+         border-bottom:2px solid grey;
+         
+         
+}
+.form-box p{
+       text-align:center;
+       margin-top:25px;
+       font-size:14px;
+       word-spacing:3px;
+       text-transform:uppercase;
+       color:gray;
+}
+.form-box p a{
+     text-decoration:none;
+}
+.form-box button{
+        width:165px;
+        height:45px;
+        float:left;
+        padding-bottom:0px;
+        border:none;
+        text-transform:uppercase;
+}
+.form-box .sign
+{
+   background:#2F4F4F;
+   color:#fff;
+}
+</style>
+</head>
+<body>
 
+
+<div class="box">
+   <div class="form-box">
+      <h2>Login To Kayunga Parish</h2>
+      <input type="email" placeholder="EMAIL" autocomplete="nope">
+      <input type="password" placeholder="PASSWORD" >
+      <p><a href="#">Forgot your password?</a></p>
+      <br>
+      <button>Register</button>
+      <button class="sign" >Sign in</button>
+   </div>
+</div>
+</body>
+</html>
