--- a/Present1.html
+++ b/Present1.html
@@ -2,7 +2,18 @@
 <html>
 
    <head>
-      <title>HTML embed Tag</title>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <link rel="icon" href="C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" type="image/jpg" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>catechists</title>
    </head>
 	
    <body>
