--- a/prayers1.html
+++ b/prayers1.html
@@ -2,10 +2,21 @@
 <html>
 
    <head>
-      <title>HTML embed Tag</title>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <link rel="icon" href="C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" type="image/jpg" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>Prayers</title>
    </head>
-	
-   <body>
+
+	<body>
       <embed src ="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true" width = "200" height = "150">
          <noembed><img src ="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true" alt = "Alternative Media" ></noembed>
       </embed></img align>
