--- a/videos1.html
+++ b/videos1.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <link rel="icon" href="C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" type="image/jpg" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>Videos</title>
+
 <h3><font color="blue">SOME OF PARISH SCHOOL VIDEOS</font></H3>
 <P>
 UGANDA MARTYRS S.S KAYUNGA
