--- a/Location1.html
+++ b/Location1.html
@@ -27,23 +27,29 @@
   <link href="CSS/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="CSS/responsive.css" rel="stylesheet" />
-	
+  <html>
    <body>
-          <img src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true" width = "200" height = "150">
-         <noembed><img src="https://github.com/Joshandre55/-kayunga-catholic-parish/blob/main/images/kagy.jpg.jpg?raw=true" alt = "Alternative Media" ></noembed>
-      </embed></img align>
+   <h1><font face="algerian"><font color="blue"><center><b><font size="12"><font style="word artstyle 13">OUR LADY OF FATIMA</font></font><h1></b></center></font></font>
+			<h1><font face="algerian"><font color="blue"><center><b><font size="12">KAYUNGA CATHOLIC PARISH</font><h1></b></center></font></font>
+      <embed src = "C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" width = "200" height = "150">
+	  <p>
+         <noembed><center><img src = "C:\Users\and\Desktop\New folder (2)\images\kagy.jpg.jpg" alt = "" ></center></noembed>
+     
    </body>
 
 <html>
 <body>
-<h3><font color="blue"><font size="6">ADDRESS OF THE PARISH</font></font></h3>
+<h3><font color="blue"><font size="6"><center>ADDRESS OF THE PARISH</center></font></font></h3>
 <body>
-<td><font size="4">OUR LADY FATIMA KAYUNGA PARISH,</font></td>
+<td><font size="4"><center>OUR LADY FATIMA KAYUNGA PARISH,</center></font></td>
 <P>
-<td><font size="4">P.O.BOX 18012,</font></td>
+<td><font size="4"><center>P.O.BOX 18012,</center></font></td>
 <P>
-<td><font size="4">KAYUNGA,KAMPALA.</font></td>
-</html>
+<td><font size="4"><center>NAMAGABI A,</center></font></td>
+<P>
+<td><font size="4"><center>KAYUNGA,KAMPALA.</center></font></td>
+</html
+
 <p>
  <!-- contact section -->
   <section class="contact_section layout_padding">
